Fri Sep 08 11:02:53 BST 2000 Olly Betts

	* Reenabled termlist1 for DA backend so Martin can investigate bug.
 
Fri Sep 08 10:44:53 BST 2000 Olly Betts

	* Removed a number of superfluous semicolons.

Fri Sep  8 09:26:00 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add debugging to all methods of OmPostListIterator, and make
	  get_description tell the current position.

	* Fix MultiPostList - it was never getting off the initial position.

	* Correct some messages in db_database.cc which reported being from
	  a DA database.

Thu Sep  7 23:30:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add to PostList next() and skip_to() methods which don't take a
	  minimum weight, for use outside the matcher, or when moving
	  postlists to beginning for a MultiPostList.

Thu Sep  7 23:05:54 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Extra debugging stuff added to OmPostListIterators.

	* Remove assertions in termlist, positionlist and postlist at_end()
	  methods which check that list is not at beginning.  Calling at_end()
	  at the beginning of such lists is now valid, (and returns false, even
	  if the list is empty).

Thu Sep  7 18:44:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added debug information to DB database reading code.

	* Fix a type in matcher.  (om_weight -> om_docid)

Thu Sep 07 17:44:24 BST 2000 Olly Betts

	* net/socketcommon.cc: Improved a couple of exception messages.

Thu Sep 07 16:15:17 BST 2000 Olly Betts

	* Fixed a problem with distributing NEAR and PHRASE.

Thu Sep  7 13:45:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
	* Change om_tostring(double) so that it doesn't pad with spaces,
	  fixing all the network stuff.  (Whoops)
 
Thu Sep  7 11:50:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various other fixes needed to compile with --disable-pthread-support
